@@ -1,3 +1,12 @@
+Tue Sep  3 20:12:46 2013  Tanaka Akira  <akr@fsij.org>
+
+	* bignum.c (GMP_STR2BIG_DIGITS): New macro.
+	  (str2big_gmp): New function.
+	  (rb_cstr_to_inum): Use str2big_gmp for big bignums.
+	  (rb_str2big_gmp): New function.
+
+	* internal.h (rb_str2big_gmp): Declared.
+
 Tue Sep  3 19:44:40 2013  NAKAMURA Usaku  <usa@ruby-lang.org>
 
 	* ext/win32/lib/win32/registry.rb (Win32::Registry#values): added.
